src/test/deca/context/invalid/added/test_soutenance.deca
// Doit lever une exception de vérification contextuelle

class A {}
class A {}
{
}
